banner style added

--- a/index.html
+++ b/index.html
@@ -4,12 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer</title>
+    <script src="https://kit.fontawesome.com/95b4e550be.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header></header>
+    <!--header section start-->
+    <header>
+        <nav>
+            <h3 class="influence-head">Influencer products</h3>
+            <ul>
+               <li><a href="">Home</a></li>
+               <li><a href="">Products</a></li>
+               <li><a href="">Sign Up</a></li>
+               <li><a href="">Login</a></li>
+               <li><a href=""><i class="fa-solid fa-magnifying-glass"></i></a></li>
+               <li><a href=""><i class="fa-solid fa-cart-shopping"></i></a></li>
+            </ul>
+        </nav>
+        <section class="banner">
+            <div class="banner-details">
+                <h3 class="banner-title">Start your Journey as Influencer</h3>
+                <p class="banner-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                <button class="btn-prebook">Prebook now <i class="fa-solid fa-arrow-right"></i></button>
+            </div>
+            <div class="main-camera">
+                <img src="images/main-camera.png" alt="">
+            </div>
+
+        </section>
+    </header>
 </body>
 </html>
