--- a/index.html
+++ b/index.html
@@ -33,8 +33,62 @@
             <div class="main-camera">
                 <img src="images/main-camera.png" alt="">
             </div>
-
+        </section>
+        <section>
+            <div class="logos">
+                <img src="logos/Alibaba.svg" alt="">
+                <img src="logos/Amazon.svg" alt="">
+                <img src="logos/Daraz.pk Logo.svg" alt="">
+                <img src="logos/Ebay.svg" alt="">
+                <img src="logos/Rakuten.svg" alt="">
+                <img src="logos/Target.svg" alt="">
+                <img src="logos/Walmart.svg" alt="">
+            </div>
         </section>
     </header>
+    <main>
+       <section class="items">
+        <h3 class="item-head">Popular Collection</h3>
+         <div class="item-image">
+            <div class="card"><img src="images/action.png" alt="">
+            <h4 class="item-title">Action Camera</h4> <h5 class="price">$50.48</h5><p class="items-details">Wordwide shifting available
+                Buyers protection possible!</p></div>
+
+            <div class="card"><img src="images/airpod.png" alt=""><h4 class="item-title">Airbuds</h4> <h5 class="price">$120.25</h5><p class="items-details">Wordwide shifting available
+                Buyers protection possible!</p></div>
+
+            <div class="card"><img src="images/camera.png" alt=""><h4 class="item-title">Vloggong camera</h4><h5 class="price">$100</h5><p class="items-details">Wordwide shifting available
+                Buyers protection possible!</p></div>
+
+            <div class="card"><img src="images/drone.png" alt=""><h4 class="item-title">Drone</h4><h5 class="price">$980.25</h5><p class="items-details">Wordwide shifting available
+                Buyers protection possible!</p></div>
+
+            <div class="card"><img src="images/tripod.png" alt=""><h4 class="item-title">Flex Tripod</h4><h5 class="price">$1200.00</h5><p class="items-details">Wordwide shifting available
+                Buyers protection possible!</p></div>
+
+            <div class="card"><img src="images/lights.png" alt=""><h4 class="item-title">Light Setup</h4><h5 class="price">$820.40</h5><p class="items-details">Wordwide shifting available
+                Buyers protection possible!</p></div>
+
+            <div class="card"><img src="images/mic.png" alt=""><h4 class="item-title">Microphone</h4><h5 class="price">$1800.80</h5><p class="items-details">Wordwide shifting available
+                Buyers protection possible!</p></div>
+
+            <div class="card"><img src="images/setup.png" alt=""><h4 class="item-title">Photoshoot Setup</h4><h5 class="price">$25.48</h5><p class="items-details">Wordwide shifting available
+                Buyers protection possible!</p></div>
+
+            <div class="card"><img src="images/single-light.png" alt=""><h4 class="item-title">Green Screen</h4><h5 class="price">$380.00</h5><p class="items-details">Wordwide shifting available
+                Buyers protection possible!</p></div>
+         </div>
+       </section>
+       <section class="gear">
+        <div class="gear-image">
+            <img src="images/gear.png" alt="">
+        </div>
+        <div class="features">
+            <h3 class="feature-head">Featured products at one place</h3>
+            <p class="feature-details">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            <button class="join-btn">Join Now </button>
+        </div>
+       </section>
+    </main>
 </body>
 </html>
