media query added

--- a/index.html
+++ b/index.html
@@ -13,17 +13,19 @@
 <body>
     <!--header section start-->
     <header>
-        <nav>
-            <h3 class="influence-head">Influencer products</h3>
-            <ul>
-               <li><a href="">Home</a></li>
-               <li><a href="">Products</a></li>
-               <li><a href="">Sign Up</a></li>
-               <li><a href="">Login</a></li>
-               <li><a href=""><i class="fa-solid fa-magnifying-glass"></i></a></li>
-               <li><a href=""><i class="fa-solid fa-cart-shopping"></i></a></li>
-            </ul>
-        </nav>
+        <section class="influence">
+            <nav>
+                <h3 class="influence-head">Influencer products</h3>
+                <ul>
+                   <li><a href="">Home</a></li>
+                   <li><a href="">Products</a></li>
+                   <li><a href="">Sign Up</a></li>
+                   <li><a href="">Login</a></li>
+                   <li><a href=""><i class="fa-solid fa-magnifying-glass"></i></a></li>
+                   <li><a href=""><i class="fa-solid fa-cart-shopping"></i></a></li>
+                </ul>
+            </nav>
+        </section>
         <section class="banner">
             <div class="banner-details">
                 <h3 class="banner-title">Start your Journey as Influencer</h3>
@@ -90,5 +92,12 @@
         </div>
        </section>
     </main>
+    <footer>
+        <div class="footer-style">
+            <h3 class="products">Influencer products</h3>
+            <p class="footer-detailts">Copyright © 2020  influencer products</p>
+            <p class="footer-end">All rights reserved</p>
+        </div>
+    </footer>
 </body>
 </html>
