all style added

--- a/index.html
+++ b/index.html
@@ -78,7 +78,10 @@
                 Buyers protection possible!</p></div>
 
             <div class="card"><img src="images/single-light.png" alt=""><h4 class="item-title">Green Screen</h4><h5 class="price">$380.00</h5><p class="items-details">Wordwide shifting available
-                Buyers protection possible!</p></div>
+                Buyers protection possible!</p></div>   
+         </div>
+         <div class="see-btn">
+            <button class="see-more"> See more <i class="fa-solid fa-arrow-right"></i> </button>
          </div>
        </section>
        <section class="gear">
